--- a/main.html
+++ b/main.html
@@ -8,7 +8,45 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form id="form" name="form">
+		<div class="display">
+			<input type="text" id="calc" name="calc">
+		</div>
+		<div id="buttons">
+			<div id="firstrow">
+				<input type="button" name="C" id="C" value="C" onclick="form.calc.value=''">
+				<input type="button" name="divi" id="divi" value="/" onclick="form.calc.value+='/'">
+				<input type="button" name="*" id="*" value="*" onclick="form.calc.value+='*'">
+				<input type="button" name="back" id="back" value="&#8592;" onclick="backspace()">
+			</div>
+			<div id="secondrow">
+				<input type="button" name="seven" id="seven" value="7" onclick="form.calc.value+='7'">
+				<input type="button" name="eight" id="eight" value="8" onclick="form.calc.value+='8'">
+				<input type="button" name="nine" id="nine" value="9" onclick="form.calc.value+='9'">
+				<input type="button" name="-" id="-" value="-" onclick="form.calc.value+='-'">
+			</div>
+			<div id="thirdrow">
+				<input type="button" name="four" id="four" value="4" onclick="form.calc.value+='4'">
+				<input type="button" name="five" id="five" value="5" onclick="form.calc.value+='5'">
+				<input type="button" name="six" id="six" value="6" onclick="form.calc.value+='6'">
+				<input type="button" name="plus" id="plus" value="+" onclick="form.calc.value+='+'">
+			</div>
+			<div id="fourthrow">
+				<input type="button" name="one" id="one" value="1" onclick="form.calc.value+='1'">
+				<input type="button" name="two" id="two" value="2" onclick="form.calc.value+='2'">
+				<input type="button" name="three" id="three" value="3" onclick="form.calc.value+='3'">
+				<input type="button" name="point" id="point" value="." onclick="form.calc.value+='.'">
+			</div>
+			<div id="fivthrow">
+				<input type="button" name="op" id="op" value="(" onclick="form.calc.value+='('">
+				<input type="button" name="zero" id="zero" value="0" onclick="form.calc.value+='0'">
+				<input type="button" name="cl" id="cl" value=")" onclick="form.calc.value+=')'">
+				<input type="button" name="equal" id="equal" value="=" onclick="form.calc.value=eval(form.calc.value)">
+			</div>
+		</div>
+	</form>
     <script type="text/javascript" src="./script.js">
+		
 </script>
 
 </body>
